--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.1.3",
     "i": "^0.3.6",
     "json-server": "^0.14.0",
+    "node-sass-chokidar": "^1.3.3",
     "npm": "^6.3.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -20,6 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar"
   }
 }
