--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
   },
+  "proxy": "http://localhost:3001/",
   "scripts": {
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
